--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,7 +13,7 @@
 <body>
 	<div style="margin-top: 50px; margin-left: 25px; margin-right: 25px;" 
 		class="ui container">
-		<h1 class="ui center aligned header">To Do App</h1>
+		<h1 class="ui center aligned header">Tasks-Sheet</h1>
 
 		<form class="ui form" action="/add" method="post">
 			<div class="field">
